RESOLVED FIXED68707
[GTK] Fix coding style issues in ResourceRequestSoup.cpp
https://bugs.webkit.org/show_bug.cgi?id=68707
Summary [GTK] Fix coding style issues in ResourceRequestSoup.cpp
Mario Sanchez Prada
Reported 2011-09-23 11:00:55 PDT
The following problems in this file should be addressed: check-webkit-style WebCore/platform/network/soup/ResourceRequestSoup.cpp Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:31: Alphabetical sorting problem. [build/include_order] [4] Source/WebCore/platform/network/soup/ResourceRequestSoup.cpp:99: One line control clauses should not use braces. [whitespace/braces] [4] Total errors found: 2 in 1 files
Attachments
The Patch (2.65 KB, patch)
2011-09-23 11:12 PDT, Mario Sanchez Prada
xan.lopez: review+
Mario Sanchez Prada
Comment 1 2011-09-23 11:12:32 PDT
Created attachment 108496 [details] The Patch Patch for fixing this issue
Xan Lopez
Comment 2 2011-09-23 11:15:56 PDT
Comment on attachment 108496 [details] The Patch Best. Patch. Ever.
Mario Sanchez Prada
Comment 3 2011-09-23 11:25:24 PDT
Note You need to log in before you can comment on or make changes to this bug.