2011-09-23  Mario Sanchez Prada  <msanchez@igalia.com>

[GTK] Fix coding style issues in ResourceRequestSoup.cpp
        https://bugs.webkit.org/show_bug.cgi?id=68707

        Reviewed by Xan Lopez.

        This patch fixes some issues as reported by check-webkit-style.

        * platform/network/soup/ResourceRequestSoup.cpp:
        (WebCore::ResourceRequest::updateFromSoupMessage):

git-svn-id: svn://svn.chromium.org/blink/trunk@95837 bbb929c8-8fbe-4397-9dbb-9b2b20218538